# gazebo_skeleton_visual_model_plugin

./: CMakeLists.txt  README.md  package.xml
config/: example.yaml
include/gazebo_skeleton_visual_model_plugin/: skeleton_model_plugin.hpp
launch/: example.launch
meshes/: fish.dae
scripts/: example.py
src/: skeleton_model_plugin.cpp  skeleton_visual_plugin.cpp
xacro/: fish.xacro
