<?xml version="1.0"?>
<package format="2">
  <name>gazebo_skeleton_visual_model_plugin</name>
  <version>0.0.0</version>
  <description>Model plugin package for gazebo to visualize skeleton</description>

  <maintainer email="dev@groove-x.com">GROOVE X, Inc</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/groove-x/gazebo_skeleton_visual_model_plugin</url>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
